# pae_rtac_modbus_server

./: .dockerignore  .gitignore  ARCHITECTURE.md  DBReadme.md  Dockerfile  Makefile  README.md  REDIS_ACCESS.md  REORGANIZATION.md  TIMESERIES_IMPLEMENTATION_PLAN.md  api-device-config-points-reads-prompt.md  compose.yaml  dbreadmesize.md  docker-compose.yaml  docker-compose.yml  make.ps1  modbus_client.py  modbus_service.py  pyproject.toml  requirements.txt
Readme-dev/: ARCHITECTURE.md  DBReadme.md  REORGANIZATION.md  SCHEDULER_SPEC.md  TIMESERIES_IMPLEMENTATION_PLAN.md  service-readme.md
config/: device_register_maps.json  logging.yaml  main_sel_751_register_map.csv  sel_751_register_map.csv
docker/: Dockerfile  entrypoint.sh  gunicorn_conf.py
k8s/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
postman/: config-post-body.json
scripts/: load_test_points.py  migrate_db.py  test_db_connection.py
src/: app.py  config.py  constants.py  logger.py  main.py
src/api/: __init__.py  dependencies.py
src/api/controllers/: __init__.py  device_configs.py  devices.py  read.py  reads.py  sites.py
src/api/middlewear/: __init__.py  time_range.py
src/cache/: __init__.py  cache.py  connection.py
src/db/: __init__.py  connection.py  device_configs.py  device_register_map.py  devices.py  models.py  register_map_loader.py  register_readings.py  session.py  sites.py
src/helpers/: __init__.py  date_time.py  device.py  device_configs.py  device_points.py  device_points_readings.py  devices.py  mappers.py  modbus.py  register_maps.py  sites.py
src/modbus/: client.py  modbus_utills.py
src/rtac_modbus_service/: __init__.py  app.py  config.py  main.py
src/scheduler/: __init__.py  engine.py  jobs.py  locks.py
src/schemas/: __init__.py  internal_models.py
src/utils/: config_loader.py  create_calculated_points.py  create_derived_points.py  dataframe.py  exceptions.py  map_csv_to_json.py  modbus_mapper.py  poll_device.py  sanitize.py  store_data_readings.py
tests/: dev_mock_data.py  seed_db.py
tests/e2e/: test_happy_path.py
tests/integration/: test_cache.py  test_db_roundtrip.py  test_polling_pipeline.py
tests/seed_db/: dev_mock_data.py
tests/unit/: test_api_points.py  test_modbus_client.py  test_sanitize.py
(+146 files in other folders)
